test/files/neg/t0606.scala
class Database {
  class Info
}
class Foo(db : Database) {
  val info = new db.Info
}
